1999-04-06  Adam Fedor  <fedor@gnu.org>

	* NSCharacterSets/punctuationCharSet.dat: New file

Mopn Apr 5  7:33:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRange.m: Moved most functions into header file, while
	including header to generate linkable versions.
	* Source/include/NSGeometry.h: Define MIN and MAX if required.
	* Source/include/NSRange.h: Define MIN and MAX if required and make
	most range functions a efficiency.
e
Thu Mar 11 10:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSDebug.m: Added two new functions for logging messags.
	* Source/include/NSDebug.h: Added four new logging macros.
	* Source/NSBundle.m: Updated to use new NSDebugMLLog() macro.

Wed Mar 10 09:54:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/FastMap.x: FastMapNodeForKey() - special case for empty map
	return 0 immediately.  Fast for empty maps, marginally slower othrwise.
	* Source/NSProcessInfo.m: Removed [-debugArray], Added [-debugSet],
	Added GSDebugSet() function for rapid debug level testing.
	* Source/include/NSProcessInfo.h: Remove [-debugArray], Add [-debugSet]
	* Source/include/NSDebug.h: Rewrite NSDebugLog() and NSDebugLLog() to
	be much more efficient - now minimal performance impact.

1999-03-09  Adam Fedor  <fedor@gnu.org>

	* Source/include/NSObjCRuntime.h: Define some OpenStep cpp vars.
	* Source/include/NSException.h (NS_VALUERETURN): Fix.

Tue Mar  9  5:16:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* configure.in: Added tests for syslog
	* Source/include/config.h.in: Added definitions for syslog
	* Source/NSLog.m: Added locking for multi-thread serialisation and
	added syslog support when write to stderr fails.

1999-03-08  Adam Fedor  <fedor@gnu.org>

	* Merged dawn branch to main.

Wed Mar  3  5:32:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUser.m: Fixed a typo reported by twhite@rogers.wave.ca
	* Source/TcpPort.m: Fixed typos.
